objects/BMCServiceDesk__BMC_PhysicalLocation__c.object
<CustomObject>
    <description>BMC_PhysicalLocation: CMDB Class used to store information about the position and address of physical elements.   This class corresponds to the DMTF CIM_Location class.</description>
    <fields>
        <fullName>BMCServiceDesk__AddressAdditionalInfo__c</fullName>
        <label>Address Additional Information</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Address__c</fullName>
        <label>Address</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Altitude__c</fullName>
        <label>Altitude</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__City__c</fullName>
        <label>City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CoordinateFormat__c</fullName>
        <label>Coordinate Format</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CountryCode__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OTH - Any Other Country</fullName>
                </value>
                <value>
                    <fullName>ABW - Aruba</fullName>
                </value>
                <value>
                    <fullName>AFG - Afghanistan</fullName>
                </value>
                <value>
                    <fullName>AGO - Angola</fullName>
                </value>
                <value>
                    <fullName>AIA - Anguilla</fullName>
                </value>
                <value>
                    <fullName>ALA - Aland Islands</fullName>
                </value>
                <value>
                    <fullName>ALB - Albania</fullName>
                </value>
                <value>
                    <fullName>AND - Andorra</fullName>
                </value>
                <value>
                    <fullName>ANT - Netherlands Antilles</fullName>
                </value>
                <value>
                    <fullName>ARE - United Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>ARG - Argentina</fullName>
                </value>
                <value>
                    <fullName>ARM - Armenia</fullName>
                </value>
                <value>
                    <fullName>ASM - American Samoa</fullName>
                </value>
                <value>
                    <fullName>ATA - Antarctica</fullName>
                </value>
                <value>
                    <fullName>ATF - French Southern Territories</fullName>
                </value>
                <value>
                    <fullName>ATG - Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>AUS - Australia</fullName>
                </value>
                <value>
                    <fullName>AUT - Austria</fullName>
                </value>
                <value>
                    <fullName>AZE - Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>BDI - Burundi</fullName>
                </value>
                <value>
                    <fullName>BEL - Belgium</fullName>
                </value>
                <value>
                    <fullName>BEN - Benin</fullName>
                </value>
                <value>
                    <fullName>BFA - Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>BGD - Bangladesh</fullName>
                </value>
                <value>
                    <fullName>BGR - Bulgaria</fullName>
                </value>
                <value>
                    <fullName>BHR - Bahrain</fullName>
                </value>
                <value>
                    <fullName>BHS - Bahamas</fullName>
                </value>
                <value>
                    <fullName>BIH - Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>BLR - Belarus</fullName>
                </value>
                <value>
                    <fullName>BLZ - Belize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Country__c</fullName>
        <label>Country</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FaxNumber__c</fullName>
        <label>Fax Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Latitude__c</fullName>
        <label>Latitude</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Longitude__c</fullName>
        <label>Longitude</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MailStop__c</fullName>
        <label>Mail Stop</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PhoneNumber__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PhysicalPosition__c</fullName>
        <label>Physical Position</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__StateOrProvince__c</fullName>
        <label>State Or Province</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WebPage__c</fullName>
        <label>WebPage</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <label>Physical Location</label>
    <nameField>
        <label>BMC_PhysicalLocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Physical Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>